--- a/Notebook/path/CheckGPUWithPython.ipynb
+++ b/Notebook/path/CheckGPUWithPython.ipynb
@@ -5,7 +5,13 @@
    "id": "e9bba255-8867-4b62-89b6-037d3193d51b",
    "metadata": {},
    "source": [
-    "# GPUが機能しているかPythonで計算して確認"
+    "# GPUが機能しているかPythonで計算して確認\n",
+    "\n",
+    "※ 初歩ではないので必要に応じて実施して下さい。\n",
+    "\n",
+    "※ 構築手順は以下を参照（Google Colab等を使えば自分で構築しないで済む）\n",
+    "- https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?OSS%E3%81%AELLM#aa81fc3e\n",
+    "- https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?LLM%E3%81%AEFT#a8ccf18b"
    ]
   },
   {
