--- a/Notebook/path/LoadEnvFrom_dotenv.ipynb
+++ b/Notebook/path/LoadEnvFrom_dotenv.ipynb
@@ -10,39 +10,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8f636344",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: python-dotenv in /home/seigi/.python3_venv/lib/python3.12/site-packages (1.1.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#!pip install python-dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "7e3f7a00",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# .envというファイルから環境変数をロード\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv(override=True)\n",
-    "api_key = os.getenv('OPENAI_API_KEY')"
+    "load_dotenv(override=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ac744961",
    "metadata": {},
    "outputs": [
@@ -50,22 +52,241 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "APIキーが見つかりました。今のところ問題はありません。\n"
+      "OpenAI APIキーが存在し、sk-proj-で始まります。\n",
+      "Anthropic APIキーは設定されていません（これはオプションです）\n",
+      "Google APIキーが存在し、AIで始まります。\n",
+      "DeepSeek APIキーは設定されていません（これはオプションです）\n",
+      "Groq APIキーは設定されていません（これはオプションです）\n"
      ]
     }
    ],
    "source": [
-    "# Check the OPENAI_API_KEY\n",
-    "api_key = os.getenv('OPENAI_API_KEY')\n",
+    "# キープレフィックスを印刷して、デバッグに役立てます\n",
+    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
+    "anthropic_api_key = os.getenv('ANTHROPIC_API_KEY')\n",
+    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
+    "deepseek_api_key = os.getenv('DEEPSEEK_API_KEY')\n",
+    "groq_api_key = os.getenv('GROQ_API_KEY')\n",
     "\n",
-    "if not api_key:\n",
-    "    print(\"APIキーが見つかりません。このフォルダ内のトラブルシューティングノートブックを参照して、APIキーを特定し、修正してください。\")\n",
-    "elif not api_key.startswith(\"sk-proj-\"):\n",
-    "    print(\"APIキーは見つかりましたが、sk-proj-で始まりません。正しいキーを使用していることを確認してください。トラブルシューティングノートブックを参照してください。\")\n",
-    "elif api_key.strip() != api_key:\n",
-    "    print(\"APIキーは見つかりましたが、先頭または末尾にスペースまたはタブ文字が含まれている可能性があります。これらを削除してください。トラブルシューティングノートブックを参照してください。\")\n",
+    "if openai_api_key:\n",
+    "    print(f\"OpenAI APIキーが存在し、{openai_api_key[:8]}で始まります。\")\n",
     "else:\n",
-    "    print(\"APIキーが見つかりました。今のところ問題はありません。\")"
+    "    print(\"OpenAI APIキーが設定されていません\")\n",
+    "    \n",
+    "if anthropic_api_key:\n",
+    "    print(f\"Anthropic APIキーが存在し、{anthropic_api_key[:7]}で始まります。\")\n",
+    "else:\n",
+    "    print(\"Anthropic APIキーは設定されていません（これはオプションです）\")\n",
+    "\n",
+    "if google_api_key:\n",
+    "    print(f\"Google APIキーが存在し、{google_api_key[:2]}で始まります。\")\n",
+    "else:\n",
+    "    print(\"Google APIキーが設定されていません（これはオプションです）\")\n",
+    "\n",
+    "if deepseek_api_key:\n",
+    "    print(f\"DeepSeek APIキーが存在し、{deepseek_api_key[:3]}で始まります。\")\n",
+    "else:\n",
+    "    print(\"DeepSeek APIキーは設定されていません（これはオプションです）\")\n",
+    "\n",
+    "if groq_api_key:\n",
+    "    print(f\"Groq APIキーが存在し、{groq_api_key[:4]}で始まります。\")\n",
+    "else:\n",
+    "    print(\"Groq APIキーは設定されていません（これはオプションです）\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f412f80b-4797-4641-b230-d1fa6cf6fe09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gpt-4-0613\n",
+      "gpt-4\n",
+      "gpt-3.5-turbo\n",
+      "gpt-5-nano\n",
+      "gpt-5\n",
+      "gpt-5-mini-2025-08-07\n",
+      "gpt-5-mini\n",
+      "gpt-5-nano-2025-08-07\n",
+      "davinci-002\n",
+      "babbage-002\n",
+      "gpt-3.5-turbo-instruct\n",
+      "gpt-3.5-turbo-instruct-0914\n",
+      "dall-e-3\n",
+      "dall-e-2\n",
+      "gpt-4-1106-preview\n",
+      "gpt-3.5-turbo-1106\n",
+      "tts-1-hd\n",
+      "tts-1-1106\n",
+      "tts-1-hd-1106\n",
+      "text-embedding-3-small\n",
+      "text-embedding-3-large\n",
+      "gpt-4-0125-preview\n",
+      "gpt-4-turbo-preview\n",
+      "gpt-3.5-turbo-0125\n",
+      "gpt-4-turbo\n",
+      "gpt-4-turbo-2024-04-09\n",
+      "gpt-4o\n",
+      "gpt-4o-2024-05-13\n",
+      "gpt-4o-mini-2024-07-18\n",
+      "gpt-4o-mini\n",
+      "gpt-4o-2024-08-06\n",
+      "chatgpt-4o-latest\n",
+      "o1-mini-2024-09-12\n",
+      "o1-mini\n",
+      "gpt-4o-realtime-preview-2024-10-01\n",
+      "gpt-4o-audio-preview-2024-10-01\n",
+      "gpt-4o-audio-preview\n",
+      "gpt-4o-realtime-preview\n",
+      "omni-moderation-latest\n",
+      "omni-moderation-2024-09-26\n",
+      "gpt-4o-realtime-preview-2024-12-17\n",
+      "gpt-4o-audio-preview-2024-12-17\n",
+      "gpt-4o-mini-realtime-preview-2024-12-17\n",
+      "gpt-4o-mini-audio-preview-2024-12-17\n",
+      "o1-2024-12-17\n",
+      "o1\n",
+      "gpt-4o-mini-realtime-preview\n",
+      "gpt-4o-mini-audio-preview\n",
+      "o3-mini\n",
+      "o3-mini-2025-01-31\n",
+      "gpt-4o-2024-11-20\n",
+      "gpt-4o-search-preview-2025-03-11\n",
+      "gpt-4o-search-preview\n",
+      "gpt-4o-mini-search-preview-2025-03-11\n",
+      "gpt-4o-mini-search-preview\n",
+      "gpt-4o-transcribe\n",
+      "gpt-4o-mini-transcribe\n",
+      "o1-pro-2025-03-19\n",
+      "o1-pro\n",
+      "gpt-4o-mini-tts\n",
+      "o3-2025-04-16\n",
+      "o4-mini-2025-04-16\n",
+      "o3\n",
+      "o4-mini\n",
+      "gpt-4.1-2025-04-14\n",
+      "gpt-4.1\n",
+      "gpt-4.1-mini-2025-04-14\n",
+      "gpt-4.1-mini\n",
+      "gpt-4.1-nano-2025-04-14\n",
+      "gpt-4.1-nano\n",
+      "gpt-image-1\n",
+      "codex-mini-latest\n",
+      "gpt-4o-realtime-preview-2025-06-03\n",
+      "gpt-4o-audio-preview-2025-06-03\n",
+      "o4-mini-deep-research\n",
+      "o4-mini-deep-research-2025-06-26\n",
+      "gpt-5-chat-latest\n",
+      "gpt-5-2025-08-07\n",
+      "gpt-3.5-turbo-16k\n",
+      "tts-1\n",
+      "whisper-1\n",
+      "text-embedding-ada-002\n",
+      "ft:gpt-4o-mini-2024-07-18:test:pricer:C1D8PKD1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "url = \"https://api.openai.com/v1/models\"\n",
+    "headers = {\n",
+    "    \"Authorization\": f\"Bearer {api_key}\",\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, headers=headers)\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()\n",
+    "    for model in data[\"data\"]:\n",
+    "        print(model[\"id\"])\n",
+    "else:\n",
+    "    print(\"Error:\", response.status_code, response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "de7776eb-c567-4d16-865a-9d9f49cede4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models/embedding-gecko-001\n",
+      "models/gemini-1.5-pro-latest\n",
+      "models/gemini-1.5-pro-002\n",
+      "models/gemini-1.5-pro\n",
+      "models/gemini-1.5-flash-latest\n",
+      "models/gemini-1.5-flash\n",
+      "models/gemini-1.5-flash-002\n",
+      "models/gemini-1.5-flash-8b\n",
+      "models/gemini-1.5-flash-8b-001\n",
+      "models/gemini-1.5-flash-8b-latest\n",
+      "models/gemini-2.5-pro-preview-03-25\n",
+      "models/gemini-2.5-flash-preview-05-20\n",
+      "models/gemini-2.5-flash\n",
+      "models/gemini-2.5-flash-lite-preview-06-17\n",
+      "models/gemini-2.5-pro-preview-05-06\n",
+      "models/gemini-2.5-pro-preview-06-05\n",
+      "models/gemini-2.5-pro\n",
+      "models/gemini-2.0-flash-exp\n",
+      "models/gemini-2.0-flash\n",
+      "models/gemini-2.0-flash-001\n",
+      "models/gemini-2.0-flash-exp-image-generation\n",
+      "models/gemini-2.0-flash-lite-001\n",
+      "models/gemini-2.0-flash-lite\n",
+      "models/gemini-2.0-flash-preview-image-generation\n",
+      "models/gemini-2.0-flash-lite-preview-02-05\n",
+      "models/gemini-2.0-flash-lite-preview\n",
+      "models/gemini-2.0-pro-exp\n",
+      "models/gemini-2.0-pro-exp-02-05\n",
+      "models/gemini-exp-1206\n",
+      "models/gemini-2.0-flash-thinking-exp-01-21\n",
+      "models/gemini-2.0-flash-thinking-exp\n",
+      "models/gemini-2.0-flash-thinking-exp-1219\n",
+      "models/gemini-2.5-flash-preview-tts\n",
+      "models/gemini-2.5-pro-preview-tts\n",
+      "models/learnlm-2.0-flash-experimental\n",
+      "models/gemma-3-1b-it\n",
+      "models/gemma-3-4b-it\n",
+      "models/gemma-3-12b-it\n",
+      "models/gemma-3-27b-it\n",
+      "models/gemma-3n-e4b-it\n",
+      "models/gemma-3n-e2b-it\n",
+      "models/gemini-2.5-flash-lite\n",
+      "models/gemini-2.5-flash-image-preview\n",
+      "models/embedding-001\n",
+      "models/text-embedding-004\n",
+      "models/gemini-embedding-exp-03-07\n",
+      "models/gemini-embedding-exp\n",
+      "models/gemini-embedding-001\n",
+      "models/aqa\n",
+      "models/imagen-3.0-generate-002\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "url = \"https://generativelanguage.googleapis.com/v1beta/models\"\n",
+    "params = {\"key\": api_key}\n",
+    "\n",
+    "response = requests.get(url, params=params)\n",
+    "if response.status_code == 200:\n",
+    "    data = response.json()\n",
+    "    for model in data.get(\"models\", []):\n",
+    "        print(model[\"name\"])\n",
+    "else:\n",
+    "    print(\"Error:\", response.status_code, response.text)"
    ]
   }
  ],
