--- a/Notebook/path/ed-donner_agents/1_foundations/1_lab1_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/1_foundations/1_lab1_ja.ipynb
@@ -4,7 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# エージェントAIでのあなたの冒険の始まりへようこそ"
+    "# エージェントAIでのあなたの冒険の始まりへようこそ\n",
+    "\n",
+    "### 目次\n",
+    "- セットアップの確認  \n",
+    "事前準備（セットアップガイドやREADMEの確認、必要な拡張機能のインストール）を促す案内。\n",
+    "\n",
+    "- Python環境と拡張機能の説明  \n",
+    "Jupyter NotebookでPythonとJupyter拡張機能の導入方法、Kernelの選択方法など解説。\n",
+    "\n",
+    "- APIキーのロード\n",
+    "  - dotenvを使って.envファイルからAPIキー（主にOpenAI APIキー）を環境変数としてロード。\n",
+    "  - APIキーが正しく設定されていない場合のトラブルシューティングガイドが記載されています。\n",
+    "\n",
+    "- APIキーの確認  \n",
+    "PythonのosモジュールでAPIキーが取得できているかチェックし、結果を表示します。\n",
+    "\n",
+    "- OpenAIクライアントの準備\n",
+    "OpenAIライブラリからOpenAIクラスをインポートし、インスタンス化します。\n",
+    "\n",
+    "- LLM（大規模言語モデル）との対話\n",
+    "  - OpenAIのAPIを使い、チャット形式でモデルに質問を送信し、回答を取得。\n",
+    "  - 例：What is 2+2?などの簡単な質問、IQ判定用の難問生成などを行います。\n",
+    "\n",
+    "- Markdown形式での出力  \n",
+    "回答結果をJupyter NotebookのMarkdown表示で見やすく出力します。\n",
+    "\n",
+    "- エクササイズ（実践課題）"
    ]
   },
   {
