--- a/Notebook/path/ed-donner_agents/1_foundations/3_lab3_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/1_foundations/3_lab3_ja.ipynb
@@ -14,7 +14,36 @@
     "\n",
     "`summary.txt`というファイルも作成しました\n",
     "\n",
-    "まだツールを使用するつもりはありません。明日ツールを追加します。"
+    "まだツールを使用するつもりはありません。明日ツールを追加します。\n",
+    "\n",
+    "### 概要\n",
+    "個人のLinkedInプロフィール（PDF形式）とその要約テキスト（`summary.txt`）を用いて、  \n",
+    "AIチャットボット（LLM）を構築し、Webサイト上で自身になりきって質問応答できる仕組みを作る。  \n",
+    "さらに、回答品質を自動評価し、不適切な場合は再回答する機能も実装しています。\n",
+    "\n",
+    "- セットアップとパッケージの導入\n",
+    "  - `dotenv`, `openai`, `pypdf`, `gradio`などのパッケージをインポート。\n",
+    "  - LinkedInのPDF（`me/linkedin.pdf`）を読み込み、テキスト化。\n",
+    "  - 要約テキスト（`me/summary.txt`）を読み込み。\n",
+    "\n",
+    "- システムプロンプトの生成  \n",
+    "`Ed Donner`（例）になりきるためのプロンプトを作成し、その人物情報としてLinkedInテキストと要約を付与。\n",
+    "\n",
+    "- チャットボットの実装\n",
+    "  - `chat()`関数: ユーザーからの質問と履歴をもとにOpenAI API（GPT-4o-mini）で回答を生成。\n",
+    "  - Gradioの`ChatInterface`でチャットUIを起動。\n",
+    "\n",
+    "- 回答の自動評価\n",
+    "  - Pydanticで回答評価用モデル（`Evaluation`）を定義。\n",
+    "  - 評価用プロンプトを用意し、Gemini（Googleのモデル）で回答の品質を判定。\n",
+    "  - `evaluate()`関数で評価結果（許容/非許容、フィードバック）を取得。\n",
+    "\n",
+    "- 再回答フロー\n",
+    "  - 評価で非許容の場合、フィードバックを付与して再度OpenAI APIに回答を生成させる（`rerun()`関数）。\n",
+    "  - `chat()`関数のロジックで、自動評価と再回答を組み合わせて返答の品質を担保。\n",
+    "\n",
+    "- 追加機能（例）  \n",
+    "特定キーワード（例：patent）が含まれる場合、回答をピッグラテン（Pig Latin）に変換するようにプロンプトを追加。"
    ]
   },
   {
@@ -70,15 +99,40 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "load_dotenv(override=True)\n",
-    "openai = OpenAI()"
+    "load_dotenv(override=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# openai と geminiの初期化\n",
+    "import os\n",
+    "openai = OpenAI()\n",
+    "gemini = OpenAI(\n",
+    "    api_key=os.getenv(\"GOOGLE_API_KEY\"), \n",
+    "    base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,10 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 最も簡単な、Gradio の Chat関数は、gpt-4o-miniを使用し、historyにも対応する。\n",
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_prompt}] + history + [{\"role\": \"user\", \"content\": message}]\n",
     "    response = openai.chat.completions.create(model=\"gpt-4o-mini\", messages=messages)\n",
@@ -187,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -214,13 +269,24 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# キャリアアバター（経歴紹介AI）とチャットしてみる。\n",
     "gr.ChatInterface(chat, type=\"messages\").launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 以下のようなことをChatで質問する\n",
+    "- hi there\n",
+    "- what is your greatest accomplishment?\n",
+    "- what is a challenge that you encountered and needed to overcome?"
    ]
   },
   {
@@ -238,11 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 評価のためにPydanticモデルを作成\n",
+    "# 評価の構造化出力のためにPydanticモデルを作成\n",
     "from pydantic import BaseModel\n",
     "\n",
     "class Evaluation(BaseModel):\n",
@@ -252,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,25 +358,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "gemini = OpenAI(\n",
-    "    api_key=os.getenv(\"GOOGLE_API_KEY\"), \n",
-    "    base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# 評価結果を構造化出力する、evaluate関数は、Gradio の Chat関数から呼び出され、gemini-2.0-flashを使用し、historyにも対応する。\n",
     "def evaluate(reply, message, history) -> Evaluation:\n",
-    "\n",
+    "    # replyは応答、messageはプロンプト、historyはmessageを含まない。\n",
     "    messages = [{\"role\": \"system\", \"content\": evaluator_system_prompt}] + [{\"role\": \"user\", \"content\": evaluator_user_prompt(reply, message, history)}]\n",
     "    response = gemini.beta.chat.completions.parse(model=\"gemini-2.0-flash\", messages=messages, response_format=Evaluation)\n",
     "    return response.choices[0].message.parsed"
@@ -318,43 +372,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, I hold a patent for an invention related to an apparatus for determining role fitness while eliminating unwanted bias. This work was a collaboration with GQR, a rapidly growing recruitment firm, and it combines our expertise in AI with the recruitment industry to address challenges in hiring. If you'd like to know more about this patent or how it fits into the broader AI and recruitment landscape, feel free to ask!\n",
+      "is_acceptable=True feedback='This is a great response. The agent accurately states that they have a patent (which is verifiable from the linked in), and gives some background information on it. The agent then is engaging by saying \"If you\\'d like to know more about this patent or how it fits into the broader AI and recruitment landscape, feel free to ask!\"'\n"
+     ]
+    }
+   ],
    "source": [
+    "# テスト：キャリアアバター（経歴紹介AI）に質問「特許をお持ちですか？」\n",
     "messages = [{\"role\": \"system\", \"content\": system_prompt}] + [{\"role\": \"user\", \"content\": \"do you hold a patent?\"}]\n",
     "response = openai.chat.completions.create(model=\"gpt-4o-mini\", messages=messages)\n",
-    "reply = response.choices[0].message.content"
+    "reply = response.choices[0].message.content\n",
+    "print(reply)\n",
+    "\n",
+    "# キャリアアバター（経歴紹介AI）の応答を評価\n",
+    "# replyは応答、messageはプロンプト、「historyにmessageを含めない。」\n",
+    "evaluation = evaluate(reply, \"do you hold a patent?\", messages[:1])\n",
+    "print(evaluation)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reply"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "evaluate(reply, \"do you hold a patent?\", messages[:1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# evaluate関数が失敗したときに再実行を行う関数で、システムプロンプトに拒否情報を追加して再実行\n",
     "def rerun(reply, message, history, feedback):\n",
-    "    updated_system_prompt = system_prompt + \"\\n\\n# ＃以前の回答は拒否された\\ nyouを返信しようとしましたが、品質管理はあなたの返信を拒否しました\\ n \"\n",
-    "    updated_system_prompt += f\"# ＃あなたの試みられた答え：\\ n {Reply} \\ n \\ n \"\n",
-    "    updated_system_prompt += f\"# ＃拒絶の理由：\\ n {フィードバック} \\ n \\ n \"\n",
+    "    \n",
+    "    # 前の回答が拒否されました。返信しようとしましたが、品質管理によって返信が拒否されました。\n",
+    "    updated_system_prompt = system_prompt + \"\\n\\n## Previous answer rejected\\nYou just tried to reply, but the quality control rejected your reply\\n\"\n",
+    "    # 回答の試み:{reply}\n",
+    "    updated_system_prompt += f\"## Your attempted answer:\\n{reply}\\n\\n\"\n",
+    "    # 拒否理由:{feedback}\n",
+    "    updated_system_prompt += f\"## Reason for rejection:\\n{feedback}\\n\\n\"\n",
+    "    \n",
     "    messages = [{\"role\": \"system\", \"content\": updated_system_prompt}] + history + [{\"role\": \"user\", \"content\": message}]\n",
     "    response = openai.chat.completions.create(model=\"gpt-4o-mini\", messages=messages)\n",
     "    return response.choices[0].message.content"
@@ -362,38 +420,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Gradio の Chat関数、条件分岐と評価機能を追加。\n",
     "def chat(message, history):\n",
-    "    if \"patent\" in message:\n",
+    "\n",
+    "    # 自己紹介のオプション条件分岐\n",
+    "    if \"patent\" in message: # \"patent\"と言う文字が含まれていたら、返答は必ずピッグラテン語で行えと言う指示を加える。\n",
     "        system = system_prompt + \"\\n\\nEverything in your reply needs to be in pig latin - \\\n",
     "              it is mandatory that you respond only and entirely in pig latin\"\n",
     "    else:\n",
     "        system = system_prompt\n",
+    "\n",
+    "    # キャリアアバター（経歴紹介AI）\n",
     "    messages = [{\"role\": \"system\", \"content\": system}] + history + [{\"role\": \"user\", \"content\": message}]\n",
     "    response = openai.chat.completions.create(model=\"gpt-4o-mini\", messages=messages)\n",
     "    reply =response.choices[0].message.content\n",
     "\n",
+    "    # 自己紹介の評価機能\n",
     "    evaluation = evaluate(reply, message, history)\n",
-    "    \n",
+    "\n",
+    "    # 評価機能が拒否した場合、再実行\n",
     "    if evaluation.is_acceptable:\n",
     "        print(\"渡された評価 - 返信を返します\")\n",
     "    else:\n",
     "        print(\"評価の失敗 - 再試行\")\n",
     "        print(evaluation.feedback)\n",
-    "        reply = rerun(reply, message, history, evaluation.feedback)       \n",
+    "        reply = rerun(reply, message, history, evaluation.feedback)\n",
+    "\n",
+    "    # 自己紹介の結果\n",
     "    return reply"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "渡された評価 - 返信を返します\n",
+      "評価の失敗 - 再試行\n",
+      "The response is not acceptable. The agent is responding in Pig Latin, which is not professional. The agent should be responding in a professional and engaging tone, as if talking to a potential client or future employer.\n"
+     ]
+    }
+   ],
    "source": [
     "gr.ChatInterface(chat, type=\"messages\").launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 以下のようなことをChatで質問する\n",
+    "- what is your current job?\n",
+    "- do you have a patent?\n",
+    "\n",
+    "※ patent が入力されるとピッグラテン語の応答になりコレは評価で失敗する。再実行時はピッグラテン語は指示されないので成功する。"
    ]
   }
  ],
