--- a/Notebook/path/TableOfContents.ipynb
+++ b/Notebook/path/TableOfContents.ipynb
@@ -38,6 +38,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "449282bc-30c4-439a-92fa-d488a7028f32",
+   "metadata": {},
+   "source": [
+    "### [GPU環境](CheckGPUWithPython.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b4e3248e-95a9-43aa-9883-5c0ce7cc99b5",
    "metadata": {
     "tags": []
@@ -702,6 +710,19 @@
    "source": [
     "#### [LLM_Fine-tuning](LLM_Fine-tuning2.ipynb)\n",
     "[PhiCookBook/code/04.Finetuning/Phi-3-finetune-lora-python.ipynb](https://github.com/microsoft/PhiCookBook/blob/main/code/04.Finetuning/Phi-3-finetune-lora-python.ipynb)に寄せたDebug用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67baf164-8cd7-4b82-bd20-e119c04cfc1c",
+   "metadata": {},
+   "source": [
+    "### Edward Donner\n",
+    "https://github.com/ed-donner\n",
+    "\n",
+    "#### [LLM Engineering](./ed-donner_llm/README.md)\n",
+    "\n",
+    "#### [LLM Agents](./ed-donner_agents/README.md)"
    ]
   },
   {
