--- a/Notebook/path/ed-donner_agents/1_foundations/4_lab4_ja.ipynb
+++ b/Notebook/path/ed-donner_agents/1_foundations/4_lab4_ja.ipynb
@@ -20,8 +20,8 @@
     "\n",
     "次に、 `.env` ファイルに2行を追加します。\n",
     "\n",
-    "PUSHOVER_USER=_Pushoverのホーム画面の右上にある、おそらくu_で始まるキーを入力\n",
-    "PUSHOVER_TOKEN=_キーを入力して、エージェント（または何でも）という新しいアプリケーションをクリックして、おそらくa_で始まるキーを入力\n",
+    "- PUSHOVER_USER=_Pushoverのホーム画面の右上にある、おそらくu_で始まるキーを入力\n",
+    "- PUSHOVER_TOKEN=_キーを入力して、エージェント（または何でも）という新しいアプリケーションをクリックして、おそらくa_で始まるキーを入力\n",
     "\n",
     "`.env`ファイルを保存し、` load_dotenv（override = true） `を保存した後、環境変数を設定することを忘れないでください。\n",
     "\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uで始まるPushoverのユーザーが見つかりました\n",
+      "aで始まるPushoverのトークンが見つかりました\n"
+     ]
+    }
+   ],
    "source": [
     "# Pushover用\n",
     "\n",
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +104,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Push: HEY!!\n"
+     ]
+    }
+   ],
    "source": [
     "# プッシュ通知の送付\n",
     "push(\"HEY!!\")"
@@ -105,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,16 +197,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'type': 'function',\n",
+       "  'function': {'name': 'record_user_details',\n",
+       "   'description': 'Use this tool to record that a user is interested in being in touch and provided an email address',\n",
+       "   'parameters': {'type': 'object',\n",
+       "    'properties': {'email': {'type': 'string',\n",
+       "      'description': 'The email address of this user'},\n",
+       "     'name': {'type': 'string',\n",
+       "      'description': \"The user's name, if they provided it\"},\n",
+       "     'notes': {'type': 'string',\n",
+       "      'description': \"Any additional information about the conversation that's worth recording to give context\"}},\n",
+       "    'required': ['email'],\n",
+       "    'additionalProperties': False}}},\n",
+       " {'type': 'function',\n",
+       "  'function': {'name': 'record_unknown_question',\n",
+       "   'description': \"Always use this tool to record any question that couldn't be answered as you didn't know the answer\",\n",
+       "   'parameters': {'type': 'object',\n",
+       "    'properties': {'question': {'type': 'string',\n",
+       "      'description': \"The question that couldn't be answered\"}},\n",
+       "    'required': ['question'],\n",
+       "    'additionalProperties': False}}}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,9 +263,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Push: Recording this is a really hard question asked that I couldn't answer\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'recorded': 'ok'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# レイドバインドで関数呼び出し\n",
     "globals()[\"record_unknown_question\"](\"this is a really hard question\")"
@@ -226,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,9 +394,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7862\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# プロトタイプをテストする。\n",
     "gr.ChatInterface(chat, type=\"messages\").launch()"
@@ -345,65 +439,115 @@
     "- hi there\n",
     "- what is your current job?\n",
     "- do you have a patent?\n",
-    "- who is your favorite musician?"
+    "- who is your favorite musician?\n",
+    "- I'd like to get in touch!\n",
+    "- I'm at ed@edwarddonner.com"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## そして今展開用\n",
+    "## そして今、デプロイ\n",
     "\n",
-    "このコードは「app.py」にあります\n",
+    "このコードは（プロトタイプ実装を詰め込んだ）「app.py」にあり、コレを「HuggingFace Spaces」にデプロイします。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7863\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7863/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# app.pyをローカル実行（.envが使われる）\n",
+    "from app import Me\n",
+    "import gradio as gr\n",
     "\n",
-    "HuggingFace Spacesに展開します。\n",
+    "me = Me()\n",
+    "gr.ChatInterface(me.chat, type=\"messages\").launch()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 開始する前に\n",
+    "「me」ディレクトリでファイルがあなたについて話すように更新することを忘れないでください - LinkedInプロフィールとsummary.txt - また、`app.py` 中の `self.name = \"Ed Donner\"` も変更します。また、1_Foundationsディレクトリ内にREADMEファイルがないことを確認してください。ある場合は、削除してください。展開プロセスは、このディレクトリに新しいREADMEファイルを作成します。\n",
     "\n",
-    "開始する前に「me」ディレクトリでファイルがあなたについて話すように更新することを忘れないでください - LinkedInプロフィールとsummary.txt - また、`app.py` 中の `self.name = \"Ed Donner\"` も変更します。  \n",
+    "#### デプロイの手順\n",
     "\n",
-    "また、1_Foundationsディレクトリ内にreadmeファイルがないことを確認してください。ある場合は、削除してください。展開プロセスは、このディレクトリに新しいreadmeファイルを作成します。\n",
-    "\n",
-    "1. https://huggingface.co にアクセスして、アカウントを設定します  \n",
-    "2. 右上のアバターメニューから、アクセストークンを選択し「新しいトークンの作成」を選択し。書き込み許可を与えます（書き込み許可が必要です！）新しいキーの記録を保持してください。  \n",
-    "3. ターミナルで `uv tool install 'huggingface_hub[cli]'` を実行し、Huggingfaceツールをインストールするには、`hf auth login` にキーを使用してコマンドラインでログインします。その後、`hf auth whoami` を実行して、ログインしていることを確認してください。\n",
-    "4. 新しいトークンを取り、.envファイルに追加してください： `HF_TOKEN=hf_xxx`\n",
-    "5. 1_Foundationsフォルダーから入力： `uv run gradio deploy` \n",
-    "6. 指示に従ってください：\"career_conversation\"に名前を付け、`app.py` を指定し、ハードウェアとしてcpu-basicを選択し、秘密を提供する必要があると言い、OpenAI APIキー、Pushoverユーザー、トークンを提供し、GitHubアクションに「いいえ」と言います。  \n",
+    "1. https://huggingface.co にアクセスして、アカウントを設定。\n",
+    "1. 右上のアバターメニューから、アクセストークンを選択し「新しいトークンの作成」を選択し。書き込み許可を与えます（書き込み許可が必要です！）新しいキーの記録を保持。\n",
+    "1. ターミナルで `uv tool install 'huggingface_hub[cli]'` を実行し、uv を使って Hugging Face Hub ライブラリと CLI をインストール（コレは仮想環境で無い方が良い）。\n",
+    "1. そして、`hf auth login` でキーを使用してログイン。その後、`hf auth whoami` を実行しログインを確認（`hf` は `huggingface-cli` のエイリアス）。\n",
+    "1. 新しいトークンを取り、.envファイルに追加： `HF_TOKEN=hf_xxx`\n",
+    "1. 1_Foundationsフォルダから `uv run gradio deploy` と入力 ... コレは、「Hugging Face Spaces」や「Gradio Spaces」にGradioのUIアプリをデプロイするためのサブコマンド。\n",
+    "1. なお、基本的に、1_Foundationsフォルダのカレントとサブフォルダ中の除外の条件に引っかからないファイルがアップロードされるもよう。\n",
+    "1. 指示に従い、\"career_conversation\"に名前を付け、`app.py` を指定し、ハードウェアとしてcpu-basicを選択し、\n",
+    "1. `.env` はデプロイされないので、別途シークレットを入力（OpenAI APIキー、Pushoverユーザー、トークン）\n",
+    "1. 最後に GitHub Action に関する問いに「いいえ」と答える。\n",
     "\n",
     "これらのヒントをありがとう、ロバート、ジェームズ、マーティンズ、アンドラス、プリヤに感謝します。  \n",
     "次の2つのセクションをお読みください - 秘密を変更する方法、およびスペースを再配置する方法（この1_Foundationsディレクトリで作成されるreadme.mdを削除する必要がある場合があります）。\n",
     "\n",
-    "#### これらの秘密の詳細：\n",
+    "#### シークレットの詳細\n",
     "\n",
-    "これらの秘密で何が起こっているかに混乱している場合：それぞれの秘密のキー名と価値を入力することを望んでいます。  \n",
-    "`openai_api_key`  \n",
-    "に続く：  \n",
-    "`sk-proj -...`  \n",
+    "デプロイ後もシークレットを変えることができる。\n",
     "\n",
-    "そして、あなたがこのように秘密を設定したくない場合、または何かがうまくいかない場合、それは問題ありません - あなたは後であなたの秘密を変えることができます：  \n",
-    "1. HuggingfaceのWebサイトにログインします  \n",
-    "2. 右上のアバターメニューからプロフィール画面に移動します  \n",
-    "3. 展開したスペースを選択します  \n",
-    "4. 右上の設定ホイールをクリックします  \n",
-    "5. 下にスクロールして、秘密（変数と秘密のセクション）を変更したり、スペースを削除したりできます。\n",
+    "1. HuggingfaceのWebサイトにログイン\n",
+    "1. 右上のアバターメニューからプロフィールに移動\n",
+    "1. デプロイしたSpacesを選択\n",
+    "1. 右上の設定歯車をクリックして下にスクロールして、\n",
+    "1. シークレットを変更、スペースを再起動・削除など。\n",
     "\n",
-    "#### そして今あなたは展開する必要があります！\n",
+    "#### これで配備が完了しました!\n",
     "\n",
-    "すべてを完全に交換し、キーから再び開始する場合は、この1_Foundationsフォルダーで作成されたreadme.mdを削除する必要がある場合があります。\n",
+    "すべてを完全に交換する場合は、1_Foundationsフォルダで作成されたREADMEファイルを削除する必要がある場合があります。\n",
     "\n",
-    "これが私のものです：https：//huggingface.co/spaces/ed-donner/career_conversation\n",
+    "これが私のものです: https://huggingface.co/spaces/ed-donner/Career_Conversation\n",
     "\n",
     "学生がどのように彼らが彼らの国の大統領になることができるかを尋ねたというプッシュ通知を受け取りました😂😂\n",
     "\n",
     "展開の詳細については：\n",
     "\n",
-    "https://www.gradio.app/guides/sharing-your-app#hosting-on-hfスペース\n",
+    "https://www.gradio.app/guides/sharing-your-app#hosting-on-hf-spaces\n",
     "\n",
-    "将来あなたのスペースを削除するには：  \n",
-    "1. ログインHuggingface\n",
-    "2. アバターメニューから、プロファイルを選択します\n",
-    "3. スペース自体をクリックして、右上の設定ホイールを選択します\n",
-    "4. 下部の削除セクションにスクロールします\n",
-    "5. \n"
+    "スペースを削除するには：  \n",
+    "\n",
+    "1. HuggingfaceのWebサイトにログイン\n",
+    "1. 右上のアバターメニューからプロフィールに移動\n",
+    "1. デプロイしたSpacesを選択、右上の設定歯車をクリック\n",
+    "1. 下にスクロールして、スペースを削除\n",
+    "1. また、Gradio がこの 1_foundations フォルダ内に作成した README ファイルを削除 (そうしないと、次回 Gradio をデプロイするときに質問が表示されなくなります)。"
    ]
   },
   {
@@ -446,13 +590,6 @@
     "    </tr>\n",
     "</table>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
